tests/NormalTests/paczka1/small_fuzzy/35930166.err
Error in line 7: Dngh3iS A76 32,7
Error in line 10: Dngh3iS S341 15,7
